# AmortaPy

./: README.md  requirements.txt  setup.cfg  setup.py
AmortaPy/: __init__.py  _api.py  _utils.py
AmortaPy/core/: _amortization.py  _amortization_functions.py  _constants.py  _loan_amortization.py  _loan_functions.py  _plots.py
AmortaPy/core/templates/: styles.css
AmortaPy/templates/: styles.css
Docs/: Amortization_Example.ipynb  Amortization_Example2.ipynb  Amortization_Example3.ipynb  README.md
