[metadata]
name = AmortaPy
version = 0.0.2
author = Ben Emery
author_email = bole3670+AmortaPy@gmail.com
description = AmortaPy - Amortization calculations, modelling, and visualisation 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/b3mery/AmortaPy
project_urls = 
    Bug_Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires =
    typing_extensions >= 4.3.0
    pandas >= 1.4.3
[options.package_data]
* = *.css
